12/10/12 - new Input type Tags - for easy filling relation in the field
           By this Input Type you can select current keywords from remote slice,
           and also add new keywords, which is then written to the remote slice.
           All works as standard item relations in AA.
           Used "select2" library, which use jQuery. Just include
           /apc-aa/javascript/aajslib-jquery.php in your pages - all is loaded
           dynamicaly after the firs ussage
           Not working insite AA admin interface, yet (there we use normal
           relation field)
         - {tagcloud:<item_ids>[:<count>[:<alias>[:<count_field>]]]} - Creates
           tag cloud from the items.
            <item_ids>    - dash separated list of ids of all keywords (tags)
            <count>       - maximum number of displayed keywords (all by default)
            <alias>       - The AA expression used for each keyword (_#HEADLINK used as default)
            <count_field> - The id of the field, where you already have the number
                            of ussage precounted. It is very good idea,to have such
                            field - in other case the counts must be countedon every
                            ussage. The count could be counted automaticaly
                            in the field by using "Comuted field for INSERT/UPDATE"
                            with the parameter "_#BACKLINK:_#BACKLINK::day", where
                            alias _#BACKLINK could be definned as
                              {count:{backlinks:{id..............}::-}}
                            or say
                              {count:{ids:1450a615da76cae02493aac79e129da9:d-relation........-=-{id..............}}}
           Ussage:
             {tagcloud:{ids:02e34dc7f9da6473fc84ad662dfe53a}}
             {tagcloud:{ids:02e34dc7f9da6473fc84ad662dfe53a}:20}
             {tagcloud:{ids:02e34dc7f9da6473fc84ad662dfe53a::headline........}::<i>_#HEADLINK</i>}